そうゆう　訂正

--- a/shoukai.html
+++ b/shoukai.html
@@ -115,7 +115,7 @@
 					<span class="hutofont">
 						水泳って実は結構感覚で泳ごうとする人が多いです。
 					</span>
-					あまり考えないで泳ぐ、そうゆう方がかなり居ます。
+					あまり考えないで泳ぐ、そういう方がかなり居ます。
 				</p>
 				<p>
 				でも、それだとタイムが伸びなやんだ時どうすればいいかわからなくなりますよね。</p>
